--- a/package.json
+++ b/package.json
@@ -1,13 +1,33 @@
 {
-  "name": "cli-portfolio",
+  "name": "dhiraj",
   "version": "1.0.0",
+  "type": "module",
+  "description": "A CLI portfolio for showcasing my work and connecting with others.",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "dhiraj": "./index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": ""
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [
+    "cli",
+    "portfolio",
+    "developer",
+    "npx",
+    "nodejs",
+    "Dhiraj",
+    "Dhiraj Kumar",
+    "dhiraj",
+    "men-pack"
+  ],
+  "author": "Dhiraj Kumar",
+  "license": "MIT",
+  "dependencies": {
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "clear": "^0.1.0",
+    "inquirer": "^9.2.8",
+    "open": "^8.4.0"
+  }
 }
